# filesystem_namespace

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: filesystem.cpp  filesystem.hpp  main.cpp
source/test/: unit_testing.hpp
source/test/copy_iterator/: test.hpp
source/test/copy_iterator/copy_test/: copy.cpp  copy.hpp  test.hpp
source/test/glob_tests/: glob_tests.hpp
source/test/glob_tests/nonrecursive/: globtest.cpp  globtest.hpp  test.hpp
source/test/glob_tests/recursive/: globtest.cpp  globtest.hpp  test.hpp
source/test/recursive_iterator/: test.hpp
source/test/recursive_iterator/recursion_tests/: recursion.cpp  recursion.hpp  test.hpp
source/test/regular_iterator/: test.hpp
source/test/regular_iterator/iteration_tests/: iteration.cpp  iteration.hpp  test.hpp
